Changes for 2.2.7rc1

New features:
...G...... [ZBX-8503] increased limitation of command length for remote commands with agent (Sasha)
A.F....... [ZBX-1357] updated Chinese (Taiwan), Italian and Polish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-8887] fixed error messages when saving graph with invalid width and height (Sasha)
....I..... [ZBX-5561] fixed configuration failure during cross compilation; thanks to Christof Lauber for the patch (igors)
..F....... [ZBX-8860] fixed flexible interval updating with mass update (Krists)
.......PS. [ZBX-8621] added validation of received SNMP responses and warnings in case SNMP responses are bad (asaveljevs)
........S. [ZBX-8754] fixed crash in escalator when processing an alert without an user, but with a media type set (wiper)
..F....... [ZBX-8797] fixed erroneous phantom node ID detection from request parameter when using node-based system converted to nodeless (Krists)
...G...... [ZBX-8822] fixed error message being set for vm.memory.size[] items on FreeBSD (asaveljevs)
..F....... [ZBX-8693] fixed "Add" button in Configuration->Triggers->Create Trigger->Add for IE11 (arvids)
........S. [ZBX-8815] fixed adding of host groups to the host by discovery action (Sasha)
..F....... [ZBX-8727] fixed item multiplier value validation to support scientific notation correctly (Krists)
........S. [ZBX-8514] fixed bug where server would turn a passive proxy into a host if the proxy machine is running an agent that is discovered via network discovery (Juris)
..F....... [ZBX-8773] fixed inventory mode resetting when adding template to a host (Ivo)
........S. [ZBX-8798] fixed evaluation of trigger expressions where a suffixed number is followed by a subtraction (asaveljevs)
........S. [ZBX-8719] optimized value cache database requests (wiper)
..F....... [ZBX-8659] fixed graphs in screens not respecting "Show legend" setting when in dynamic mode (Krists)